# hiwonder_landerpi_startup

./: .gitignore  .gitmodules  CLAUDE.md  DepthCameraHowTo.md  NextSteps.md  README.md  checkLanderPi.py  deploy_exploration.py  deploy_explorer.py  deploy_hailo8.py  deploy_ros2_stack.py  deploy_voicecontroller.py  deploy_whisplay.py  migrate_to_nvme.py  pyproject.toml  robot_explorer.py  robot_voicecontroller.py  setup_landerpi.py  test_all_ros2.py  test_arm.py  test_arm_ros2.py  test_cameradepth.py  test_cameradepth_ros2.py  test_chassis_direct.py  test_chassis_motion_ros2.py  test_lidar.py  test_lidar_ros2.py  test_voicecontroller.py
.claude/: settings.local.json
aws/: lp-robot-bedrock-policy.json
config/: robot_params.yaml  yolo_hazards.json
docker/: Dockerfile  docker-compose.yml
docs/: Aurora930_ROS2_Interface_Analysis.md  CameraCheck.md  LanderPi_Linux_Command_Reference.md  LanderPi_Ubuntu_Setup_Guide.md  VoiceControlHowTo.md  armLanderpiHowTo.md  hardwareUpdate.md  voice_control_integration_plan.md
drivers/depth-camera/: README.md
hailo8-int/: README.md
ros2_nodes/obstacle_fusion/: package.xml  setup.cfg  setup.py
ros2_nodes/obstacle_fusion/obstacle_fusion/: fusion_node.py
ros2_nodes/sensor_bridge/: package.xml  setup.py
ros2_nodes/sensor_bridge/sensor_bridge/: __init__.py  sensor_bridge_node.py
systemd/: hailo-server.service  tars-voice.service
validation/: test_arm.py  test_arm_ros2.py  test_cameradepth.py  test_cameradepth_ros2.py  test_chassis_direct.py  test_chassis_motion_ros2.py  test_exploration.py  test_lidar.py  test_lidar_ros2.py  test_voicecontroller.py
whisplay/: .installed  install_wm8960_ubuntu.sh
(+91 files in other folders)
