<?xml version="1.0"?>
<package format="3">
  <name>sensor_bridge</name>
  <version>0.1.0</version>
  <description>Bridge ROS2 topics to JSON files for low-latency reading from host Python</description>
  <maintainer email="landerpi@example.com">LanderPi</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
